--- a/Spring-Security/security1/src/main/resources/application.yml
+++ b/Spring-Security/security1/src/main/resources/application.yml
@@ -10,8 +10,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/security?serverTimezone=Asia/Seoul
-    username: cos
-    password: cos1234
+    username: ssafy
+    password: ssafy
   jpa:
     hibernate:
       ddl-auto: update #create update none
